syntax = "proto3";

package firestore;

message Song {
  string id = 1;
  string title = 2;
  string author = 3;
  int32 year = 4;
}

service Firestore {
  rpc CreateSong(Song) returns (Song) {}
  rpc ReadSong(Song) returns (Song) {}
  rpc UpdateSong(Song) returns (Song) {}
  rpc DeleteSong(Song) returns (Song) {}
  rpc ListSongs(Empty) returns (stream Song) {}
}

message Empty {}
